# Project-Dash

./: .gitignore  README.md  pyproject.toml  requirements.txt
project_dash/: anotation_base_dates.py  app.py  classificador_dataset.py  coleta_dados.py  scrapping_twitter.py
project_dash/assets/: header.css  style.css
project_dash/modules/: dash_generate.py
project_dash/storage/backup/: pesquisa_web_scrapping.py
project_dash/storage/data_percentage_amount/: amount_weekly.csv  percentage_weekly.csv
project_dash/storage/example/: dadosScrapping.csv  porcentagemSemanal.csv  quantidadeSemanal.csv
