[tool.poetry]
name = "project-dash"
version = "0.1.0"
description = ""
authors = ["Wesley-Costa <wesleycosta06@hotmail.com>"]
readme = "README.md"
packages = [{include = "project_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.4"
altair = "4.2.0"
asttokens = "2.0.5"
attrs = "22.1.0"
autopep8 = "1.7.0"
backcall = "0.2.0"
beautifulsoup4 = "4.11.1"
blinker = "1.5"
brotli = "1.0.9"
cachetools = "5.2.0"
certifi = "2022.6.15"
charset-normalizer = "2.1.1"
click = "8.1.3"
colorama = "0.4.4"
commonmark = "0.9.1"
dash = "2.6.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
debugpy = "1.6.0"
decorator = "5.1.1"
entrypoints = "0.4"
et-xmlfile = "1.1.0"
executing = "0.8.3"
filelock = "3.8.0"
flask = "2.2.2"
flask-compress = "1.12"
gitdb = "4.0.9"
gitpython = "3.1.27"
idna = "3.3"
importlib-metadata = "4.12.0"
ipykernel = "6.13.0"
ipython = "8.2.0"
itsdangerous = "2.1.2"
jedi = "0.18.1"
jinja2 = "3.1.2"
jsonschema = "4.15.0"
jupyter-client = "7.2.2"
jupyter-core = "4.9.2"
lxml = "4.9.1"
markupsafe = "2.1.1"
matplotlib-inline = "0.1.3"
nest-asyncio = "1.5.5"
numpy = "1.23.2"
openpyxl = "3.0.10"
packaging = "21.3"
parso = "0.8.3"
pickleshare = "0.7.5"
pillow = "9.2.0"
plotly = "5.10.0"
prompt-toolkit = "3.0.29"
protobuf = "3.20.1"
psutil = "5.9.0"
pure-eval = "0.2.2"
pyarrow = "9.0.0"
pycodestyle = "2.9.1"
pydeck = "0.8.0b1"
pygments = "2.11.2"
pympler = "1.0.1"
pyparsing = "3.0.8"
pyrsistent = "0.18.1"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytz = "2022.2.1"
pytz-deprecation-shim = "0.1.0.post0"
pywin32 = "303"
pyzmq = "22.3.0"
requests = "2.28.1"
rich = "12.5.1"
semver = "2.13.0"
six = "1.16.0"
smmap = "5.0.0"
snscrape = "0.4.3.20220106"
soupsieve = "2.3.2.post1"
stack-data = "0.2.0"
streamlit = "1.12.2"
streamlit-d3-demo = "0.1.0"
tenacity = "8.0.1"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.1"
traitlets = "5.1.1"
typing-extensions = "4.3.0"
tzdata = "2022.2"
tzlocal = "4.2"
urllib3 = "1.26.12"
validators = "0.20.0"
watchdog = "2.1.9"
wcwidth = "0.2.5"
werkzeug = "2.2.2"
zipp = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
